# first-sokol-renderer

./: .gitmodules  CMakeLists.txt  compile_shaders.sh  main.cpp  mainshader.glsl  mainshader.glsl.h  test.glb  triangle.glsl  triangle.glsl.h
shaders/: mainshader.glsl  mainshader.glsl.h
